# skypro_libraries

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: external_api.py  fileio.py  loggers.py  reports.py  services.py  utils.py  views.py  views_res.py
tests/: conftest.py  test_external_api.py  test_loggers.py  test_reports.py  test_services.py  test_utils.py  test_views_res.py
